f18.js: Css editor, less flicker for SVG, longpollSVG fix, etc (Forum #82351)
git-svn-id: https://svn.fhem.de/fhem/trunk@15896 2b470e98-0d58-463d-a4d8-8e2adae1ed80

--- a/fhem/www/pgm2/f18style.css
+++ b/fhem/www/pgm2/f18style.css
@@ -22,6 +22,7 @@ table.room,table.block.wide,table.fileList {
   border-spacing:0;
   border-top:1px solid gray;
 }
+table.block.wide td > div { padding:0 4px; }
 
 #menuScrollArea { display:none; } /* commandref */
 body[fw_id] #menuScrollArea { display:block; } /* not commandref */
@@ -43,7 +44,7 @@ div.dist { padding-top:0.3em; }
 button.dist { margin:10px; background:transparent; border:0px; cursor:pointer; }
 select,input[type=submit] { cursor:pointer; }
 
-div.pin { float:right; width:1em; height:1em; }
+div.pin, div.move { float:right; width:1em; height:1em; margin-left:0.5em; }
 div.pinHeader { height:1em; padding:2px; }
 
 body.touch a { font-size: 20px; }
